chore: proxy-ui-api loading acme and email notification settings from properties
Refs: XRDDEV-2952